--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,14 @@ bin/
 ### Mac OS ###
 .DS_Store
 
-.gitignore
+*.gitignore
+*.idea
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
